# fast_zero

./: .gitignore  LICENSE  pyproject.toml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  users.py
fast_zero/routes/: auth.py  users.py
migrations/versions/: a3c79fa81d44_add_updated_at_in_users_table.py  c13d458c504c_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
